v0.5 (unreleased):

- Improved repository detection when passed a directory that contains repos:
  will now traverse through subdirectories automatically.
- Fixed an error when updating branches if the upstream is completely unrelated
  from the local branch (no common ancestor).

v0.4.1 (released December 13, 2017):

- Bump dependencies to deal with newer versions of Git.

v0.4 (released January 17, 2017):

- Added a `--prune` flag to delete remote-tracking branches that no longer
  exist on their remote after fetching.
- Added a `--bookmark-file` flag to support multiple bookmark config files.
- Added a `--cleanup` flag to remove old bookmarks that don't exist.
- Added an `--exec` flag to run a shell command on all of your repos.
- Added support for shell glob patterns and tilde expansion in bookmark files.
- Cleaned up the bookmark file format, fixing a related Windows bug. The script
  will automatically migrate to the new one.
- Fixed a bug related to Python 3 compatibility.
- Fixed unicode support.

v0.3 (released June 7, 2015):

- Added support for Python 3.
- Fixed behavior on bare repositories.
- Made branch updating code safer in general: only fast-forwardable branches
  tracking upstreams are updated. This deprecates `--merge` and `--rebase`.
- Added `--fetch-only` to disable branch updating entirely, if desired.
- Fixed trying to fetch remotes without configured refspecs.
- Miscellaneous fixes and tweaks.

v0.2.4 (released May 23, 2015):

- Follow the XDG Base Directory Specification for the config file.
- Added installation instructions for Homebrew.

v0.2.3 (released March 14, 2015):

- Added support for newer versions of GitPython.

v0.2.2 (released April 27, 2014):

- Fixed an error being raised when HEAD is detached.

v0.2.1 (released April 21, 2014):

- Fixed a bug when handling errors during a fetch.

v0.2 (released April 21, 2014):

- Rewrote backend to use GitPython instead of direct shell calls. Improved
  stability and fixed various bugs.