@@ -1,4 +1,4 @@
-Copyright (C) 2011-2017 Ben Kurtovic <ben.kurtovic@gmail.com>
+Copyright (C) 2011-2018 Ben Kurtovic <ben.kurtovic@gmail.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
