@@ -8,7 +8,7 @@ gitup: the git repository updater
 """
 
 __author__ = "Ben Kurtovic"
-__copyright__ = "Copyright (C) 2011-2017 Ben Kurtovic"
+__copyright__ = "Copyright (C) 2011-2018 Ben Kurtovic"
 __license__ = "MIT License"
 __version__ = "0.5.dev0"
 __email__ = "ben.kurtovic@gmail.com"
