@@ -145,15 +145,15 @@ def _update_branch(repo, branch, is_active=False):
             repo.git.branch(branch.name, upstream.name, force=True)
             print(GREEN + "done", end=".\n")
 
-def _update_repository(repo, repo_name, current_only, fetch_only, prune):
+def _update_repository(repo, repo_name, args):
     """Update a single git repository by fetching remotes and rebasing/merging.
 
     The specific actions depend on the arguments given. We will fetch all
-    remotes if *current_only* is ``False``, or only the remote tracked by the
-    current branch if ``True``. If *fetch_only* is ``False``, we will also
-    update all fast-forwardable branches that are tracking valid upstreams.
-    If *prune* is ``True``, remote-tracking branches that no longer exist on
-    their remote after fetching will be deleted.
+    remotes if *args.current_only* is ``False``, or only the remote tracked by
+    the current branch if ``True``. If *args.fetch_only* is ``False``, we will
+    also update all fast-forwardable branches that are tracking valid
+    upstreams. If *args.prune* is ``True``, remote-tracking branches that no
+    longer exist on their remote after fetching will be deleted.
     """
     print(INDENT1, BOLD + repo_name + ":")
 
@@ -161,7 +161,7 @@ def _update_repository(repo, repo_name, current_only, fetch_only, prune):
         active = repo.active_branch
     except TypeError:  # Happens when HEAD is detached
         active = None
-    if current_only:
+    if args.current_only:
         if not active:
             print(INDENT2, ERROR,
                   "--current-only doesn't make sense with a detached HEAD.")
@@ -177,17 +177,17 @@ def _update_repository(repo, repo_name, current_only, fetch_only, prune):
     if not remotes:
         print(INDENT2, ERROR, "no remotes configured to fetch.")
         return
-    _fetch_remotes(remotes, prune)
+    _fetch_remotes(remotes, args.prune)
 
-    if not fetch_only:
+    if not args.fetch_only:
         for branch in sorted(repo.heads, key=lambda b: b.name):
             _update_branch(repo, branch, branch == active)
 
-def _run_command(repo, repo_name, command):
+def _run_command(repo, repo_name, args):
     """Run an arbitrary shell command on the given repository."""
     print(INDENT1, BOLD + repo_name + ":")
 
-    cmd = shlex.split(command)
+    cmd = shlex.split(args.command)
     try:
         out = repo.git.execute(
             cmd, with_extended_output=True, with_exceptions=False)
@@ -198,7 +198,7 @@ def _run_command(repo, repo_name, command):
     for line in out[1].splitlines() + out[2].splitlines():
         print(INDENT2, line)
 
-def _dispatch(base_path, callback, *args):
+def _dispatch(base_path, callback, args):
     """Apply a callback function on each valid repo in the given path.
 
     Determine whether the directory is a git repo on its own, a directory of
@@ -208,9 +208,9 @@ def _dispatch(base_path, callback, *args):
 
     The given args are passed directly to the callback function after the repo.
     """
-    def _collect(paths, maxdepth=6):
+    def _collect(paths, max_depth):
         """Return all valid repo paths in the given paths, recursively."""
-        if maxdepth <= 0:
+        if max_depth == 0:
             return []
 
         valid = []
@@ -222,7 +222,7 @@ def _dispatch(base_path, callback, *args):
                 if not os.path.isdir(path):
                     continue
                 children = [os.path.join(path, it) for it in os.listdir(path)]
-                valid += _collect(children, maxdepth=maxdepth-1)
+                valid += _collect(children, max_depth - 1)
             except exc.NoSuchPathError:
                 continue
         return valid
@@ -240,6 +240,10 @@ def _dispatch(base_path, callback, *args):
         return path.split(prefix + os.path.sep, 1)[1]
 
     base = os.path.expanduser(base_path)
+    max_depth = args.max_depth
+    if max_depth >= 0:
+        max_depth += 1
+
     try:
         Repo(base)
         valid = [base]
@@ -248,12 +252,12 @@ def _dispatch(base_path, callback, *args):
         if not paths:
             print(ERROR, BOLD + base, "doesn't exist!")
             return
-        valid = _collect(paths)
+        valid = _collect(paths, max_depth)
     except exc.InvalidGitRepositoryError:
-        if not os.path.isdir(base):
+        if not os.path.isdir(base) or args.max_depth == 0:
             print(ERROR, BOLD + base, "isn't a repository!")
             return
-        valid = _collect([base])
+        valid = _collect([base], max_depth)
 
     base = os.path.abspath(base)
     suffix = "" if len(valid) == 1 else "s"
@@ -262,23 +266,23 @@ def _dispatch(base_path, callback, *args):
     valid = [os.path.abspath(path) for path in valid]
     paths = [(_get_basename(base, path), path) for path in valid]
     for name, path in sorted(paths):
-        callback(Repo(path), name, *args)
+        callback(Repo(path), name, args)
 
-def update_bookmarks(bookmarks, update_args):
+def update_bookmarks(bookmarks, args):
     """Loop through and update all bookmarks."""
     if not bookmarks:
         print("You don't have any bookmarks configured! Get help with 'gitup -h'.")
         return
 
     for path in bookmarks:
-        _dispatch(path, _update_repository, *update_args)
+        _dispatch(path, _update_repository, args)
 
-def update_directories(paths, update_args):
+def update_directories(paths, args):
     """Update a list of directories supplied by command arguments."""
     for path in paths:
-        _dispatch(path, _update_repository, *update_args)
+        _dispatch(path, _update_repository, args)
 
-def run_command(paths, command):
+def run_command(paths, args):
     """Run an arbitrary shell command on all repos."""
     for path in paths:
-        _dispatch(path, _run_command, command)
+        _dispatch(path, _run_command, args)
