@@ -1,6 +1,6 @@
 # -*- coding: utf-8  -*-
 #
-# Copyright (C) 2011-2016 Ben Kurtovic <ben.kurtovic@gmail.com>
+# Copyright (C) 2011-2018 Ben Kurtovic <ben.kurtovic@gmail.com>
 # Released under the terms of the MIT License. See LICENSE for details.
 
 import sys
@@ -8,7 +8,7 @@ import sys
 from setuptools import setup, find_packages
 
 if sys.hexversion < 0x02070000:
-    exit("Please upgrade to Python 2.7 or greater: <http://python.org/>.")
+    exit("Please upgrade to Python 2.7 or greater: <https://www.python.org/>.")
 
 from gitup import __version__
 
@@ -23,18 +23,19 @@ setup(
     version = __version__,
     author = "Ben Kurtovic",
     author_email = "ben.kurtovic@gmail.com",
-    description = "Easily pull to multiple git repositories at once",
+    description = "Easily update multiple git repositories at once",
     long_description = long_desc,
     license = "MIT License",
     keywords = "git repository pull update",
-    url = "http://github.com/earwig/git-repo-updater",
+    url = "https://github.com/earwig/git-repo-updater",
     classifiers = [
+        "Development Status :: 4 - Beta",
         "Environment :: Console",
         "Intended Audience :: Developers",
         "License :: OSI Approved :: MIT License",
         "Natural Language :: English",
         "Operating System :: MacOS :: MacOS X",
-        "Operating System :: POSIX :: Linux",
+        "Operating System :: POSIX",
         "Operating System :: Microsoft :: Windows",
         "Programming Language :: Python",
         "Programming Language :: Python :: 2.7",
@@ -44,6 +45,7 @@ setup(
         "Programming Language :: Python :: 3.4",
         "Programming Language :: Python :: 3.5",
         "Programming Language :: Python :: 3.6",
-        "Topic :: Software Development :: Version Control"
+        "Programming Language :: Python :: 3.7",
+        "Topic :: Software Development :: Version Control :: Git"
     ]
 )
